--- a/nginx.conf
+++ b/nginx.conf
@@ -2,7 +2,7 @@ events {
     worker_connections 768;
 }
 http{
-    upstream hello_case {
+    upstream appserver.secops.local {
         server app:5003;
     }
     server {
@@ -10,8 +10,7 @@ http{
         ssl_certificate /etc/ssl/testcert.pem;
         ssl_certificate_key /etc/ssl/testkey.pem;
         location / {
-
-                proxy_pass https://hello_case;
+                proxy_pass http://appserver.secops.local;
                 proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
                 proxy_set_header Host $host;
                 proxy_redirect off;
